--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
     <Header>
         
     </Header>
-        <div class="content">
-            <Table aria-colcount="2" aria-rowcount="3">
+        <div>
+            <Table>
                 <H3>Portfolio</H3>
                 <br>
                 <img src="#" alt="Hangman">
