added placeholder, fixed some font colors

--- a/contact.html
+++ b/contact.html
@@ -27,22 +27,23 @@
         <div class="container">
             <div Class="contentTopper"><h1>Contact</h1>
             </div>
+            <Div>
                 <form action="Name" method="POST">
                     <span>Name</span>
                     <br>
-                    <Input type="text"></Input>
+                    <Input type="text" name="name" placeholder="John Smith"></Input>
                     <br>
                     <span>Email</span>
                     <br>
-                    <Input type="text"></Input>
+                    <Input type="text" name="email" placeholder="Email@gmail.com"></Input>
                     <br>
                     <span>Message</span>
                     <br>
-                    <input type="text"></Input>
+                    <input type="text" name="message" placeholder=""></Input>
                     <br>
                     <button type="submit"></button>
                 </form>
-            </table>
+            </Div>
         </div>
     <footer class="footer">footer</footer> 
 </body>
