finalizing contactpage CSS

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <div Class="contentTopper"><h1>Contact</h1>
             </div>
             <Div>
-                <form action="Name" method="POST">
+                <form action="contactform.php" method="GET">
                     <span>Name</span>
                     <br>
                     <Input type="text" name="name" placeholder="John Smith"></Input>
@@ -39,9 +39,9 @@
                     <br>
                     <span>Message</span>
                     <br>
-                    <input type="text" name="message" placeholder=""></Input>
+                    <textarea name="message"></textarea>
                     <br>
-                    <button type="submit"></button>
+                    <button type="submit" name="submit">Submit</button>
                 </form>
             </Div>
         </div>
