cleaned up CSS trail and error for Displayinline

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,11 +30,13 @@
             </div>
             <div class="table">
                 <br>
+                <span>
                 <img src="https://images-na.ssl-images-amazon.com/images/I/51gEFLtVorL._SY355_.png" alt="Hangman">
                 <h2><a href="#">Hangman</a></h2>
 
                 <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/untitled-1-1-1566593533.jpg?crop=0.5625xw:1xh;center,top&resize=640:*" alt="RPG Game">
                 <h2><a href="#">RPG Game</a></h2>
+                </span>
                 <br>
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8sOs0NTROYzxoq_UH98HZLF8R-0Tad85uvURIDLvlSMPqUbDUOQ" alt="Triva Game">
                 <h2><a href="#">Triva Game</a></h2>
