--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
   <br>
   <br>
     <div class="container">
-      <div Class="contentTopper"><h1>About me</h1>
-      </div>
+     <div Class="contentTopper"><h1>About me</h1>
+    </div>
+    <div>
       <img id="bio-image" src="https://avatars1.githubusercontent.com/u/55213223?s=460&v=4" height="200" width="200" alt="Adam Murphy">
       <section id="main-bio">
-        <p>Building things whether with my hands or with a computer, I find great joy in looking back at what I have created from scratch. Occaecat elit mollit qui velit est cillum ex deserunt id aute dolore tempor eiusmod. Exercitation exercitation veniam officia cupidatat esse. Elit incididunt ipsum pariatur velit.</p>
+       <p>Building things whether with my hands or with a computer, I find great joy in looking back at what I have created from scratch. Occaecat elit mollit qui velit est cillum ex deserunt id aute dolore tempor eiusmod. Exercitation exercitation veniam officia cupidatat esse. Elit incididunt ipsum pariatur velit.</p>
         </p>
       </section>
     </div>
