finalized most CCS

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                     <br>
                     <span>Message</span>
                     <br>
-                    <textarea name="message"></textarea>
+                    <textarea name="message" rows="10"></textarea>
                     <br>
                     <button type="submit" name="submit">Submit</button>
                 </form>
