--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,11 @@
             <span id="heading_name">Adam Murphy</span>
             <div>  
                 <ul class="ulnav">
-                    <li><a href="#">Contact</a><li>|</li></li>
+                    <li><a href="./contact.html">Contact</a><li>|</li></li>
                     
-                    <li><a href="#">Portfolio</a><li>|</li> </li>
+                    <li><a href=">./portfolio.html">Portfolio</a><li>|</li> </li>
                     
-                    <li><a href="#">About </a></li>
+                    <li><a href="./index.html">About </a></li>
                 </ul>
             </div>
         </nav>
@@ -42,7 +42,7 @@
                 </ul>    
                 <ul class="table">
                     <li class="names">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8sOs0NTROYzxoq_UH98HZLF8R-0Tad85uvURIDLvlSMPqUbDUOQ" alt="Triva Game">
+                        <img src="https://storage.googleapis.com/appsapkmarket/img/6NEZK1LAXS/com.xmonetize.quizzland-main-img.webp" alt="Triva Game">
                         <h2 ><a href="#">Triva Game</a></h2>
                     </li>
                     <li class="names">
@@ -52,7 +52,7 @@
                 </ul> 
                     <ul class="table"> 
                     <li class="names">
-                        <img src="https://cdn-s.acuityscheduling.com/logo17399720.jpg?1553035978&whiteBg=1&rectangular=1" alt="Rock Paper Scissors">
+                        <img src="http://vgmpf.com/Wiki/images/c/cf/Puzzle_-_NES_-_Rock_Paper_Scissors_-_1.png" alt="Rock Paper Scissors">
                         <h2><a href="#">Rock Paper Scissors</a></h2>
                     </li>
                     </ul> 
