fixed issues with portfolio page

--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
         <title>Contact</title>
     </head>
     <body>
-        <nav id="nav-bar"> 
+        <nav class="nav-bar"> 
         <br>
-            <span id="heading_name">Adam Murphy</span>
+            <span class="heading_name">Adam Murphy</span>
             <div>  
                 <ul class="ulnav">
                     <li><a href="./contact.html">Contact</a><li>|</li></li>
@@ -45,6 +45,6 @@
                 </form>
             </Div>
         </div>
-    <footer class="footer">footer</footer> 
+    <footer class="footer">Copyright &copy;</footer> 
 </body>
 </html>
