--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
       <title>Adam's Bio</title>
     </head>
 <body>
-  <nav id="nav-bar"> 
+  <nav class="nav-bar"> 
     <br>
-    <span id="heading_name">Adam Murphy</span>
+    <span class="heading_name">Adam Murphy</span>
     <div>  
       <ul class="ulnav">
           <li><a href="./contact.html">Contact</a><li>|</li></li>
@@ -38,6 +38,6 @@
       </section>
       </div>
     </div>
-  <footer class="footer">footer</footer>
+  <footer class="footer">Copyright &copy;</footer>
 </body>
 </html>
