--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
       <section id="main-bio">
        <p>
           <img id="bio-image" src="https://avatars1.githubusercontent.com/u/55213223?s=460&v=4" height="100" width="100" alt="Adam Murphy">  
-          Building things whether with my hands or with a computer, I find great joy in looking back at what I have created from scratch. Occaecat elit mollit qui velit est cillum ex deserunt id aute dolore tempor eiusmod. Exercitation exercitation veniam officia cupidatat esse. Elit incididunt ipsum pariatur velit.</p>
-  
-         </p>
-        
+          Building things whether with my hands or with a computer, I find great joy in looking back at what I have created from scratch. Occaecat elit mollit qui velit est cillum ex deserunt id aute dolore tempor eiusmod. Exercitation exercitation veniam officia cupidatat esse. Elit incididunt ipsum pariatur velit.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel aut deserunt enim reiciendis itaque sint, harum odio quod aliquid, labore facere. Perspiciatis beatae nihil debitis aliquam repudiandae soluta sapiente consectetur.  
+          <br>
+          <br>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque fuga ex quam fugit cumque et at sapiente quo nesciunt, error, itaque aut tenetur nostrum quas magnam temporibus ducimus nam accusamus!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad alias repellendus corporis aliquid laborum praesentium nostrum, in id doloribus laudantium laboriosam at sint. Assumenda quod libero possimus nihil porro eos.
+          <br>
+          <br>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea architecto quas, saepe repudiandae ipsa animi ad quo quaerat inventore molestiae debitis modi quibusdam dignissimos aperiam ipsum reiciendis vitae. Commodi, hic.
+        </p>
       </section>
       </div>
     </div>
