--- a/portfolio.html
+++ b/portfolio.html
@@ -30,25 +30,7 @@
             </div>
             <div>
             <br>
-            <!-- <div>
-                <a href="#">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/51gEFLtVorL._SY355_.png" alt="Hangman">
-                    <div>
-                    <h3>Hangman</h3>
-                    </div>
-                </a>
-            </div>
-            <div class="shift">
-                <a href="#">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/51gEFLtVorL._SY355_.png" alt="Hangman">
-                    <div>
-                    <h3>Hangman</h3>
-                    </div>
-                </a>
-            </div> -->
-            
-            
-                <ul class="table">
+                <ul>
                     <li class="names">
                         <a href="#">
                         <img src="https://images-na.ssl-images-amazon.com/images/I/51gEFLtVorL._SY355_.png" alt="Hangman">
@@ -57,14 +39,14 @@
                     <li class="names">
                         <a href="#">
                         <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/untitled-1-1-1566593533.jpg?crop=0.5625xw:1xh;center,top&resize=640:*" alt="RPG Game">
-                        <h2 class="Labels">RPG Game</h2></a>
+                        <h2>RPG Game</h2></a>
                     </li>
                 </ul>    
-                <ul class="table">
+                <ul>
                     <li class="names">
                         <a href="#">
                         <img src="https://storage.googleapis.com/appsapkmarket/img/6NEZK1LAXS/com.xmonetize.quizzland-main-img.webp" alt="Triva Game">
-                        <h2 class="Labels">Triva Game</h2></a>
+                        <h2>Triva Game</h2></a>
                     </li>
                     <li class="names">
                         <a href="#">
@@ -72,11 +54,11 @@
                         <h2>Rutger Info Widget</h2></a>
                     </li>
                 </ul> 
-                    <ul class="table"> 
+                    <ul> 
                     <li class="names">
                         <a href="#">
                         <img src="http://vgmpf.com/Wiki/images/c/cf/Puzzle_-_NES_-_Rock_Paper_Scissors_-_1.png" alt="Rock Paper Scissors">
-                        <h2 class="Labels">Rock Paper Scissors</h2></a>
+                        <h2>Rock Paper Scissors</h2></a>
                     </li>
                     </ul> 
             </div>       
