--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-  <html lang="en-us">
-    <head>
-      <meta charset="UTF-8">
+<html lang="en-us">
 
-      <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-      <title>Adam's Bio</title>
-    </head>
+<head>
+  <meta charset="UTF-8">
+
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <title>Adam's Bio</title>
+</head>
+
 <body>
-  <nav class="nav-bar"> 
+  <nav class="nav-bar">
     <br>
     <span class="heading_name">Adam Murphy</span>
-    <div>  
+    <div>
       <ul class="ulnav">
-          <li><a href="./contact.html">Contact</a><li>|</li></li>
-                            
-          <li><a href="./portfolio.html">Portfolio</a><li>|</li> </li>
-              
-          <li><a href="./index.html">About </a></li>
+        <li><a href="./contact.html">Contact</a>
+        <li>|</li>
+        </li>
+
+        <li><a href="./portfolio.html">Portfolio</a>
+        <li>|</li>
+        </li>
+
+        <li><a href="./index.html">About </a></li>
       </ul>
     </div>
   </nav>
@@ -24,25 +30,37 @@
   <br>
   <br>
   <br>
-    <div class="container">
-      <div class="contentTopper"><h1>About me</h1>
-      </div>
-      <div>
+  <div class="container">
+    <div class="contentTopper">
+      <h1>About me</h1>
+    </div>
+    <div>
       <section id="main-bio">
-       <p>
-          <img id="bio-image" src="https://avatars1.githubusercontent.com/u/55213223?s=460&v=4" height="100" width="100" alt="Adam Murphy">  
-          Building things whether with my hands or with a computer, I find great joy in looking back at what I have created from scratch. Occaecat elit mollit qui velit est cillum ex deserunt id aute dolore tempor eiusmod. Exercitation exercitation veniam officia cupidatat esse. Elit incididunt ipsum pariatur velit.
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel aut deserunt enim reiciendis itaque sint, harum odio quod aliquid, labore facere. Perspiciatis beatae nihil debitis aliquam repudiandae soluta sapiente consectetur.  
+        <p>
+          <img id="bio-image" src="https://avatars1.githubusercontent.com/u/55213223?s=460&v=4" height="100" width="100"
+            alt="Adam Murphy">
+          Building things whether with my hands or with a computer, I find great joy in looking back at what I have
+          created from scratch. Occaecat elit mollit qui velit est cillum ex deserunt id aute dolore tempor eiusmod.
+          Exercitation exercitation veniam officia cupidatat esse. Elit incididunt ipsum pariatur velit.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel aut deserunt enim reiciendis itaque sint, harum
+          odio quod aliquid, labore facere. Perspiciatis beatae nihil debitis aliquam repudiandae soluta sapiente
+          consectetur.
           <br>
           <br>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque fuga ex quam fugit cumque et at sapiente quo nesciunt, error, itaque aut tenetur nostrum quas magnam temporibus ducimus nam accusamus!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad alias repellendus corporis aliquid laborum praesentium nostrum, in id doloribus laudantium laboriosam at sint. Assumenda quod libero possimus nihil porro eos.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque fuga ex quam fugit cumque et at sapiente quo
+          nesciunt, error, itaque aut tenetur nostrum quas magnam temporibus ducimus nam accusamus!Lorem ipsum, dolor
+          sit amet consectetur adipisicing elit. Ad alias repellendus corporis aliquid laborum praesentium nostrum, in
+          id doloribus laudantium laboriosam at sint. Assumenda quod libero possimus nihil porro eos.
           <br>
           <br>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea architecto quas, saepe repudiandae ipsa animi ad quo quaerat inventore molestiae debitis modi quibusdam dignissimos aperiam ipsum reiciendis vitae. Commodi, hic.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea architecto quas, saepe repudiandae ipsa animi ad
+          quo quaerat inventore molestiae debitis modi quibusdam dignissimos aperiam ipsum reiciendis vitae. Commodi,
+          hic.
         </p>
       </section>
-      </div>
     </div>
+  </div>
   <footer class="footer">Copyright &copy;</footer>
 </body>
+
 </html>
